fixed scrollbar jumping by forcing always present scrollbar.

--- a/css/all.css
+++ b/css/all.css
@@ -33,6 +33,7 @@
 }
 
 body {
+  overflow-y: scroll;
   background-size: cover;
   background-attachment: fixed;
   height: 100%;
